# gh-action-secrets

./: .gitignore  Anchor.toml
.github/workflows/: solana-anchor-test.yml  solana-anchor-upgrade.yml  solana-anchor.yml
deploy/: index.ts  package.json
programs/gh-action-scrects/: Cargo.toml
programs/gh-action-scrects/src/: lib.rs
tests/: gh-action-scrects.ts
